--- a/src/app/pages/dialog-pacientes/dialog-pacientes.component.html
+++ b/src/app/pages/dialog-pacientes/dialog-pacientes.component.html
@@ -1,9 +1,9 @@
 <h1 mat-dialog-title>Registro de Paciente</h1>
 <div mat-dialog-content>
   <form [formGroup]="productForm">
-    <mat-form-field appearance="outline">
+    <mat-form-field appearance="outline" *ngIf="!editPaciente">
       <mat-label>Folio</mat-label>
-      <input formControlName="folio" matInput placeholder="Folio" />
+      <input formControlName="folio" matInput placeholder="Folio" readonly />
     </mat-form-field>
 
     <mat-form-field appearance="outline">
