--- a/src/app/pages/pacientes/pacientes.component.html
+++ b/src/app/pages/pacientes/pacientes.component.html
@@ -14,36 +14,49 @@
       <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort>
           
-          <!-- Rol Column -->
+          <!-- Folio Column -->
           <ng-container matColumnDef="folio">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Folio </th>
             <td mat-cell *matCellDef="let row"> {{row.folio}} </td>
           </ng-container>
           
-          <!-- User Column -->
-          <ng-container matColumnDef="paciente">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Paciente </th>
-            <td mat-cell *matCellDef="let row"> {{row.paciente}} </td>
+          <!-- Nombre Paciente Column -->
+          <ng-container matColumnDef="nombre">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre(s) </th>
+            <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
           </ng-container>
   
-          <!-- Status Column -->
+          <!-- apellido Paterno Column -->
+          <ng-container matColumnDef="apellidoP">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Apellido Paterno </th>
+            <td mat-cell *matCellDef="let row"> {{row.apellidoP}} </td>
+          </ng-container>
+
+          <!-- apellido Materno Column -->
+          <ng-container matColumnDef="apellidoM">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Apellido Materno </th>
+            <td mat-cell *matCellDef="let row"> {{row.apellidoM}} </td>
+          </ng-container>
+
+          <!-- Edad Column -->
           <ng-container matColumnDef="edad">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Edad </th>
             <td mat-cell *matCellDef="let row"> {{row.edad}} </td>
           </ng-container>
           
-          <!-- Status Column -->
+          <!-- Genero Column -->
           <ng-container matColumnDef="sexo">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Sexo </th>
             <td mat-cell *matCellDef="let row"> {{row.sexo}} </td>
           </ng-container>
-          <!-- Status Column -->
+
+          <!-- Telefono Column -->
           <ng-container matColumnDef="telefono">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Telefono </th>
             <td mat-cell *matCellDef="let row"> {{row.telefono}} </td>
           </ng-container>
           
-          <!-- Status Column -->
+          <!-- Correo Column -->
           <ng-container matColumnDef="correo">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Correro </th>
             <td mat-cell *matCellDef="let row"> {{row.correo}} </td>
@@ -54,10 +67,10 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Accion</th>
             <td mat-cell *matCellDef="let row">
               <button mat-icon-button color="primary">
-                <mat-icon>edit</mat-icon>
+                <mat-icon (click)="editPaciente(row)" >edit</mat-icon>
               </button>
               <button mat-icon-button color="warn">
-                <mat-icon>delete</mat-icon>
+                <mat-icon (click)="deletePaciente(row.folio)">delete</mat-icon>
               </button>
             </td>
           </ng-container>
