--- a/src/app/pages/dialog-pacientes/dialog-pacientes.component.html
+++ b/src/app/pages/dialog-pacientes/dialog-pacientes.component.html
@@ -37,12 +37,12 @@
 
     <mat-form-field appearance="outline">
         <mat-label>Telefono</mat-label>
-        <input formControlName="telefono" matInput placeholder="Telefono" />
+        <input formControlName="telefono" matInput placeholder="Telefono" pattern="^(\+\d{1,2}\s?)?1?\-?\.?\s?\(?\d{3}\)?[\s.-]?\d{3}[\s.-]?\d{4}$"/>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
       <mat-label>Correo</mat-label>
-      <input formControlName="correo" matInput placeholder="Correo" />
+      <input formControlName="correo" matInput placeholder="Correo" pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" />
   </mat-form-field>
   
   </form>
