--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -52,6 +52,14 @@
             </a>
           </li>
           <li class="nav-item">
+            <a [routerLink]="['/dashboard/medicos']" class="nav-link">
+              <i class="nav-icon fas fa-user "></i>
+              <p>
+                Medicos
+              </p>
+            </a>
+          </li>
+          <li class="nav-item">
             <a (click)="logOut()" class="nav-link">
               <i class="nav-icon fas fa-sign-out-alt"></i>
               <p>
