--- a/src/app/pages/dialog-medicos/dialog-medicos.component.css
+++ b/src/app/pages/dialog-medicos/dialog-medicos.component.css
@@ -1,3 +1,22 @@
-mat-form-field{
-    width: 100%;
+
+div{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
+
+form{
+    padding-left: 3.4rem;
+}
+
+mat-form-field{
+   
+    margin-right: 1rem;
+}
+
+.btn-centrar{
+    margin-left: 10px;
+}
+
+ 
