--- a/src/app/pages/dialog-medicos/dialog-medicos.component.html
+++ b/src/app/pages/dialog-medicos/dialog-medicos.component.html
@@ -1,25 +1,25 @@
-<h1 mat-dialog-title>Registro de Paciente</h1>
+<h1 mat-dialog-title>Registro de Medico</h1>
 <div mat-dialog-content>
   <form [formGroup]="productForm">
-    <mat-form-field appearance="outline">
+    <mat-form-field appearance="outline" *ngIf="!editData">
       <mat-label>Folio</mat-label>
-      <input formControlName="folio" matInput placeholder="Folio" />
+      <input formControlName="folio" matInput placeholder="Folio" readonly />
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-      <mat-label>Nombres</mat-label>
-      <input formControlName="nombre" matInput placeholder="Nombres" />
+      <mat-label>Nombre</mat-label>
+      <input formControlName="nombre" matInput placeholder="Nombres" pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$" />
     </mat-form-field>
 
-    <mat-form-field appearance="outline">
+    <!-- <mat-form-field appearance="outline">
         <mat-label>Apeliido Paterno</mat-label>
         <input formControlName="apellidoP" matInput placeholder="Apeliido Paterno" />
-    </mat-form-field>
+    </mat-form-field> -->
     
-    <mat-form-field appearance="outline">
+    <!-- <mat-form-field appearance="outline">
         <mat-label>Apeliido Materno</mat-label>
         <input formControlName="apellidoM" matInput placeholder="Apeliido Materno" />
-    </mat-form-field>
+    </mat-form-field> -->
 
     <mat-form-field appearance="outline">
         <mat-label>Especialidad</mat-label>
@@ -42,12 +42,12 @@
 
     <mat-form-field appearance="outline">
         <mat-label>Telefono</mat-label>
-        <input formControlName="telefono" matInput placeholder="Telefono" />
+        <input formControlName="telefono" matInput placeholder="Telefono" pattern="^(\+\d{1,2}\s?)?1?\-?\.?\s?\(?\d{3}\)?[\s.-]?\d{3}[\s.-]?\d{4}$" />
     </mat-form-field>
 
     <mat-form-field appearance="outline">
       <mat-label>Correo</mat-label>
-      <input formControlName="correo" matInput placeholder="Correo" />
+      <input formControlName="correo" matInput placeholder="Correo" pattern="^[a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,15})$" />
   </mat-form-field>
   
   </form>
@@ -55,6 +55,6 @@
 
 <div mat-dialog-action [align]="'end'">
   <button mat-raised-button color="warn" mat-dialog-close>Cerrar</button>
-  <button style="margin-left: 8px;" mat-raised-button color="primary" (click)="addMedico(productForm.value)">{{actionBtn}}</button>
+  <button class="btn-centrar" style="margin-left: 8px;" mat-raised-button color="primary" (click)="addMedico(productForm.value)">{{actionBtn}}</button>
 </div>
 
