--- a/src/app/pages/medicos/medicos.component.html
+++ b/src/app/pages/medicos/medicos.component.html
@@ -21,9 +21,9 @@
           </ng-container>
           
           <!-- User Column -->
-          <ng-container matColumnDef="paciente">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Paciente </th>
-            <td mat-cell *matCellDef="let row"> {{row.paciente}} </td>
+          <ng-container matColumnDef="medico">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Medico </th>
+            <td mat-cell *matCellDef="let row"> {{row.medico}} </td>
           </ng-container>
 
           <!-- User Column -->
