--- a/src/app/pages/dialog-examenes/dialog-examenes.component.html
+++ b/src/app/pages/dialog-examenes/dialog-examenes.component.html
@@ -9,7 +9,7 @@
     <mat-form-field appearance="outline">
       <mat-label>Paciente</mat-label>
       <input
-        formControlName="paciente"
+        formControlName="nombre"
         matInput
         placeholder="Paciente"
         readonly
