Modal examenes con Servicio

--- a/src/app/pages/dialog-examenes/dialog-examenes.component.html
+++ b/src/app/pages/dialog-examenes/dialog-examenes.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Registro de Paciente</h1>
+<h1 mat-dialog-title>Registro de Examenes</h1>
 <div mat-dialog-content>
   <form [formGroup]="productForm">
     <mat-form-field appearance="outline">
@@ -7,11 +7,11 @@
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-      <mat-label>Paciente</mat-label>
+      <mat-label>Nombre</mat-label>
       <input
         formControlName="nombre"
         matInput
-        placeholder="Paciente"
+        placeholder="nombre"
         readonly
       />
     </mat-form-field>
