--- a/src/app/pages/examenes/examenes.component.html
+++ b/src/app/pages/examenes/examenes.component.html
@@ -27,9 +27,9 @@
           </ng-container>
   
           <!-- Status Column -->
-          <ng-container matColumnDef="paciente">
+          <ng-container matColumnDef="nombre">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Paciente </th>
-            <td mat-cell *matCellDef="let row"> {{row.paciente}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
           </ng-container>
           
           <!-- Status Column -->
