add buscarpaciente dialog

--- a/src/app/pages/dialog-buscar-paciente/dialog-buscar-paciente.component.html
+++ b/src/app/pages/dialog-buscar-paciente/dialog-buscar-paciente.component.html
@@ -2,6 +2,6 @@
     <mat-list-option *ngFor="let item of ListarPacientes" [value]="item" (click)="editPaciente(item)">
       {{item.nombre}} <br>
     </mat-list-option>
-    <button style="margin-left: 8px" mat-raised-button color="primary" (click)="selectPaciente(item)">Seleccionar</button>
+    <!-- <button style="margin-left: 8px" mat-raised-button color="primary" (click)="selectPaciente(item)">Seleccionar</button> -->
   </mat-selection-list>
   
