--- a/src/app/pages/dialog-examenes/dialog-examenes.component.html
+++ b/src/app/pages/dialog-examenes/dialog-examenes.component.html
@@ -1,9 +1,11 @@
 <h1 mat-dialog-title>Registro de Examenes</h1>
+
+<button style="margin: 5px;" (click)="buscarMedicos()" >Buscar Medico</button>
 <div mat-dialog-content>
   <form [formGroup]="productForm">
     <mat-form-field appearance="outline">
       <mat-label>Folio</mat-label>
-      <input formControlName="folio" matInput placeholder="Folio" readonly />
+      <input formControlName="folio" matInput placeholder="Folio"  />
     </mat-form-field>
 
     <mat-form-field appearance="outline">
@@ -12,7 +14,17 @@
         formControlName="nombre"
         matInput
         placeholder="nombre"
-        readonly
+       
+      />
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Nombre Medico</mat-label>
+      <input
+        formControlName="nombreMedico"
+        matInput
+        placeholder="nombreMedico"
+       
       />
     </mat-form-field>
 
