--- a/src/app/pages/medicos/medicos.component.html
+++ b/src/app/pages/medicos/medicos.component.html
@@ -23,7 +23,7 @@
           <!-- User Column -->
           <ng-container matColumnDef="medico">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Medico </th>
-            <td mat-cell *matCellDef="let row"> {{row.medico}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
           </ng-container>
 
           <!-- User Column -->
@@ -62,7 +62,7 @@
               <button mat-icon-button (click)="editMedico(row)" color="primary">
                 <mat-icon>edit</mat-icon>
               </button>
-              <button mat-icon-button  (click)="deleteMedico(row.code)" color="warn">
+              <button mat-icon-button  (click)="deleteMedico(row.folio)" color="warn">
                 <mat-icon>delete</mat-icon>
               </button>
             </td>
