--- a/src/app/pages/dialog-examenes/dialog-examenes.component.html
+++ b/src/app/pages/dialog-examenes/dialog-examenes.component.html
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <h1 mat-dialog-title>Registro de Examenes</h1>
 
 <button
@@ -134,4 +135,6 @@
   <button style="margin-left: 8px" mat-raised-button color="primary">
     {{ actionBtn }}
   </button>
+</div>
+
 </div>
