--- a/src/app/pages/dialog-pacientes/dialog-pacientes.component.html
+++ b/src/app/pages/dialog-pacientes/dialog-pacientes.component.html
@@ -8,17 +8,17 @@
 
     <mat-form-field appearance="outline">
       <mat-label>Nombres</mat-label>
-      <input formControlName="nombre" matInput placeholder="Nombres" pattern=" ^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$" />
+      <input formControlName="nombre" matInput placeholder="Nombres"  />
     </mat-form-field>
 
     <mat-form-field appearance="outline">
         <mat-label>Apeliido Paterno</mat-label>
-        <input formControlName="apellidoP" matInput placeholder="Apeliido Paterno" pattern=" ^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$" />
+        <input formControlName="apellidoP" matInput placeholder="Apeliido Paterno"  />
     </mat-form-field>
     
     <mat-form-field appearance="outline">
         <mat-label>Apeliido Materno</mat-label>
-        <input formControlName="apellidoM" matInput placeholder="Apeliido Materno" pattern=" ^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$" />
+        <input formControlName="apellidoM" matInput placeholder="Apeliido Materno"  />
     </mat-form-field>
 
     <mat-form-field appearance="outline">
