--- a/src/app/pages/dialog-buscar-medico/dialog-buscar-medico.component.html
+++ b/src/app/pages/dialog-buscar-medico/dialog-buscar-medico.component.html
@@ -1,6 +1,76 @@
-<mat-selection-list #item [multiple]="false">
-    <mat-list-option *ngFor="let item of listarMedicos" [value]="item" (click)="selectMedico(item)">
-      {{item.nombreMedico}} <br>
-    </mat-list-option>
-    <!-- <button style="margin-left: 8px" mat-raised-button color="primary" (click)="selectPaciente(item)">Seleccionar</button> -->
-  </mat-selection-list>
+
+  <div class="container-fluid">
+    <div style="margin-top: 10px;">
+      <mat-form-field appearance="standard">
+        <mat-label>Filtro</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Filter" #input>
+      </mat-form-field>
+      <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort>
+          
+          <!-- Folio Column -->
+          <ng-container matColumnDef="folio">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Folio </th>
+            <td mat-cell *matCellDef="let row"> {{row.folio}} </td>
+          </ng-container>
+          
+          <!-- Nombre Paciente Column -->
+          <ng-container matColumnDef="nombre">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre(s) </th>
+            <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
+          </ng-container>
+  
+  
+          <!-- apellido Materno Column -->
+          <ng-container matColumnDef="especialidad">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Especialidad </th>
+            <td mat-cell *matCellDef="let row"> {{row.especialidad}} </td>
+          </ng-container>
+  
+          <!-- Edad Column -->
+          <ng-container matColumnDef="edad">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Edad </th>
+            <td mat-cell *matCellDef="let row"> {{row.edad}} </td>
+          </ng-container>
+          
+          <!-- Genero Column -->
+          <ng-container matColumnDef="sexo">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Sexo </th>
+            <td mat-cell *matCellDef="let row"> {{row.sexo | genero}} </td>
+          </ng-container>
+  
+          <!-- Telefono Column -->
+          <ng-container matColumnDef="telefono">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Telefono </th>
+            <td mat-cell *matCellDef="let row"> {{row.telefono}} </td>
+          </ng-container>
+          
+          <!-- Correo Column -->
+          <ng-container matColumnDef="correo">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Correro </th>
+            <td mat-cell *matCellDef="let row"> {{row.correo}} </td>
+          </ng-container>
+          
+          <!-- Action Column -->
+          <ng-container matColumnDef="accion">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+            <td mat-cell *matCellDef="let row">
+              <button class="btn" mat-raised-button color="primary">
+                <mat-icon (click)="selectMedico(row)" >reply</mat-icon>
+              </button>
+            </td>
+          </ng-container>
+  
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          
+          <!-- Row shown when there is no matching data. -->
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">No se encontraron resultados "{{input.value}}"</td>
+          </tr>
+        </table>
+        
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+      </div>
+    </div>
+  </div>
