Cambios medicos y examenes

--- a/src/app/pages/dialog-medicos/dialog-medicos.component.html
+++ b/src/app/pages/dialog-medicos/dialog-medicos.component.html
@@ -11,15 +11,15 @@
       <input formControlName="nombre" matInput placeholder="Nombres" pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$" />
     </mat-form-field>
 
-    <!-- <mat-form-field appearance="outline">
+    <mat-form-field appearance="outline">
         <mat-label>Apeliido Paterno</mat-label>
         <input formControlName="apellidoP" matInput placeholder="Apeliido Paterno" />
-    </mat-form-field> -->
+    </mat-form-field> 
     
-    <!-- <mat-form-field appearance="outline">
+    <mat-form-field appearance="outline">
         <mat-label>Apeliido Materno</mat-label>
         <input formControlName="apellidoM" matInput placeholder="Apeliido Materno" />
-    </mat-form-field> -->
+    </mat-form-field> 
 
     <mat-form-field appearance="outline">
         <mat-label>Especialidad</mat-label>
