--- a/src/app/pages/dialog-examenes/dialog-examenes.component.html
+++ b/src/app/pages/dialog-examenes/dialog-examenes.component.html
@@ -97,7 +97,7 @@
 
       <mat-form-field appearance="outline">
         <mat-label>Fecha de examen</mat-label>
-        <input type="date"  matInput>
+        <input type="date" formControlName="fechaExamen" matInput>
       </mat-form-field>
 
 
