--- a/src/app/pages/dialog-medicos/dialog-medicos.component.html
+++ b/src/app/pages/dialog-medicos/dialog-medicos.component.html
@@ -8,7 +8,7 @@
 
     <mat-form-field appearance="outline">
       <mat-label>Nombre</mat-label>
-      <input formControlName="nombre" matInput placeholder="Nombres" pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$" />
+      <input formControlName="nombreMedico" matInput placeholder="Nombres" pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$" />
     </mat-form-field>
 
     <mat-form-field appearance="outline">
