--- a/src/app/pages/dialog-buscar-medico/dialog-buscar-medico.component.html
+++ b/src/app/pages/dialog-buscar-medico/dialog-buscar-medico.component.html
@@ -15,9 +15,9 @@
           </ng-container>
           
           <!-- Nombre Paciente Column -->
-          <ng-container matColumnDef="nombre">
+          <ng-container matColumnDef="nombreMedico">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre(s) </th>
-            <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.nombreMedico}} </td>
           </ng-container>
   
   
