--- a/src/app/pages/dialog-examenes/dialog-examenes.component.html
+++ b/src/app/pages/dialog-examenes/dialog-examenes.component.html
@@ -1,145 +1,146 @@
 <div class="container-fluid">
-<h1 mat-dialog-title>Registro de Examenes</h1>
+  <h1 mat-dialog-title>Registro de Examenes</h1>
 
-<button
-  style="margin: 5px"
-  mat-raised-button
-  color="primary"
-  (click)="buscarMedicos()"
->
-  Buscar Medico
-  <mat-icon>search</mat-icon>
-</button>
-
-<button
-  style="margin-left: 8px"
-  mat-raised-button
-  color="primary"
-  (click)="BuscarPacientes()"
->
-  Buscar Paciente
-  <mat-icon>search</mat-icon>
-</button>
-
-
-
-<mat-grid-list cols="1">
-  <div mat-dialog-content>
-    <form [formGroup]="productForm">
-      <mat-form-field appearance="outline">
-        <mat-label>Nombre Medico</mat-label>
-        <input
-          formControlName="nombreMedico"
-          matInput
-          placeholder="Nombre del Medico"
-        />
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Especialidad</mat-label>
-        <input
-          formControlName="especialidad"
-          matInput
-          placeholder="Especialidad"
-        />
-      </mat-form-field>
-      
-      <mat-form-field appearance="outline">
-        <mat-label>Folio</mat-label>
-        <input formControlName="folio" matInput placeholder="Folio" />
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Nombre</mat-label>
-        <input formControlName="nombre" matInput placeholder="Nombre" />
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Apeliido Paterno</mat-label>
-        <input
-          formControlName="apellidoP"
-          matInput
-          placeholder="Apeliido Paterno"
-        />
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Apeliido Materno</mat-label>
-        <input
-          formControlName="apellidoM"
-          matInput
-          placeholder="Apeliido Materno"
-        />
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Edad</mat-label>
-        <input formControlName="edad" matInput placeholder="Edad" />
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Sexo</mat-label>
-        <mat-select formControlName="sexo" placeholder="Sexo">
-          <mat-option value="Masculino">Masculino</mat-option>
-          <mat-option value="Femenino">Femenino</mat-option>
-        </mat-select>
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Telefono</mat-label>
-        <input formControlName="telefono" matInput placeholder="Telefono" />
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Correo</mat-label>
-        <input formControlName="correo" matInput placeholder="Correo" />
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Fecha de examen</mat-label>
-        <input type="date" formControlName="fechaExamen" matInput>
-      </mat-form-field>
-
-
-    
-
-      <mat-form-field appearance="outline">
-        <mat-label>Tipo de Examen</mat-label>
-        <mat-select formControlName="tipoExamen" placeholder="Tipo de Examen">
-          <mat-option value="Prueba de embarazo">Prueba de embarazo</mat-option>
-          <mat-option value="Grupo sanguineo">Grupo sanguineo</mat-option>
-        </mat-select>
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Prueba</mat-label>
-        <input formControlName="prueba" matInput placeholder="Prueba" />
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Resultado</mat-label>
-        <input formControlName="resultado" matInput placeholder="Resultado" />
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Dimensional</mat-label>
-        <input
-          formControlName="dimensional"
-          matInput
-          placeholder="Dimensional"
-        />
-      </mat-form-field>
-    </form>
-  </div>
-</mat-grid-list>
-
-<
-
-<div mat-dialog-action [align]="'end'">
-  <button mat-raised-button color="warn" mat-dialog-close>Cerrar</button>
-  <button (click)="registrarExamen(productForm.value)" style="margin-left: 8px" mat-raised-button color="primary">
-    {{ actionBtn }}
+  <button
+    style="margin: 5px"
+    mat-raised-button
+    color="primary"
+    (click)="buscarMedicos()"
+  >
+    Buscar Medico
+    <mat-icon>search</mat-icon>
   </button>
-</div>
 
+  <button
+    style="margin-left: 8px"
+    mat-raised-button
+    color="primary"
+    (click)="BuscarPacientes()"
+  >
+    Buscar Paciente
+    <mat-icon>search</mat-icon>
+  </button>
+
+  <mat-grid-list cols="1">
+    <div mat-dialog-content>
+      <form [formGroup]="productForm">
+        <mat-form-field appearance="outline">
+          <mat-label>Nombre Medico</mat-label>
+          <input
+            formControlName="nombreMedico"
+            matInput
+            placeholder="Nombre del Medico"
+          />
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>Especialidad</mat-label>
+          <input
+            formControlName="especialidad"
+            matInput
+            placeholder="Especialidad"
+          />
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>Folio</mat-label>
+          <input formControlName="folio" matInput placeholder="Folio" />
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>Nombre</mat-label>
+          <input formControlName="nombre" matInput placeholder="Nombre" />
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>Apeliido Paterno</mat-label>
+          <input
+            formControlName="apellidoP"
+            matInput
+            placeholder="Apeliido Paterno"
+          />
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>Apeliido Materno</mat-label>
+          <input
+            formControlName="apellidoM"
+            matInput
+            placeholder="Apeliido Materno"
+          />
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>Edad</mat-label>
+          <input formControlName="edad" matInput placeholder="Edad" />
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>Sexo</mat-label>
+          <mat-select formControlName="sexo" placeholder="Sexo">
+            <mat-option value="Masculino">Masculino</mat-option>
+            <mat-option value="Femenino">Femenino</mat-option>
+          </mat-select>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>Telefono</mat-label>
+          <input formControlName="telefono" matInput placeholder="Telefono" />
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>Correo</mat-label>
+          <input formControlName="correo" matInput placeholder="Correo" />
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>Fecha de examen</mat-label>
+          <input type="date" formControlName="fechaExamen" matInput />
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>Tipo de Examen</mat-label>
+          <mat-select formControlName="tipoExamen" placeholder="Tipo de Examen">
+            <mat-option value="Prueba de embarazo"
+              >Prueba de embarazo</mat-option
+            >
+            <mat-option value="Grupo sanguineo">Grupo sanguineo</mat-option>
+          </mat-select>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>Prueba</mat-label>
+          <input formControlName="prueba" matInput placeholder="Prueba" />
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>Resultado</mat-label>
+          <input formControlName="resultado" matInput placeholder="Resultado" />
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>Dimensional</mat-label>
+          <input
+            formControlName="dimensional"
+            matInput
+            placeholder="Dimensional"
+          />
+        </mat-form-field>
+      </form>
+    </div>
+  </mat-grid-list>
+
+  <
+
+  <div mat-dialog-action [align]="'end'">
+    <button mat-raised-button color="warn" mat-dialog-close>Cerrar</button>
+    <button
+      (click)="registrarExamen(productForm.value)"
+      style="margin-left: 8px"
+      mat-raised-button
+      color="primary"
+    >
+      {{ actionBtn }}
+    </button>
+  </div>
 </div>
