--- a/src/app/pages/examenes/examenes.component.html
+++ b/src/app/pages/examenes/examenes.component.html
@@ -45,9 +45,9 @@
           <td mat-cell *matCellDef="let row">{{ row.nombreMedico }}</td>
         </ng-container>
         <!-- Status Column -->
-        <ng-container matColumnDef="fecha">
+        <ng-container matColumnDef="fechaExamen">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha</th>
-          <td mat-cell *matCellDef="let row">{{ row.fecha }}</td>
+          <td mat-cell *matCellDef="let row">{{ row.fechaExamen | date: "dd MMMM  yyyy "}}</td>
         </ng-container>
 
         <!-- Status Column -->
