--- a/src/app/pages/medicos/medicos.component.html
+++ b/src/app/pages/medicos/medicos.component.html
@@ -26,6 +26,16 @@
             <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
           </ng-container>
 
+          <ng-container matColumnDef="apellidoP">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Apellido Paterno </th>
+            <td mat-cell *matCellDef="let row"> {{row.apellidoP}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="apellidoM">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Apellido Materno </th>
+            <td mat-cell *matCellDef="let row"> {{row.apellidoM}} </td>
+          </ng-container>
+
           <!-- User Column -->
           <ng-container matColumnDef="especialidad">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Especialidad </th>
