--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -16,9 +16,7 @@
   <!-- Right navbar links -->
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
-      <a class="nav-link" data-widget="fullscreen" href="#" role="button">
-        <i class="fas fa-expand-arrows-alt"></i>
-      </a>
+      <span class="badge bg-success user ">Usuario: {{user}}</span>
     </li>
   </ul>
 </nav>
