--- a/src/app/pages/pacientes/pacientes.component.html
+++ b/src/app/pages/pacientes/pacientes.component.html
@@ -72,6 +72,9 @@
               <button mat-icon-button color="warn">
                 <mat-icon (click)="deletePaciente(row.folio)">delete</mat-icon>
               </button>
+              <button mat-icon-button color="primary">
+                <mat-icon>assignment</mat-icon>
+              </button>
             </td>
           </ng-container>
   
