--- a/src/app/pages/dialog-asignar-examen-paciente/dialog-asignar-examen-paciente.component.css
+++ b/src/app/pages/dialog-asignar-examen-paciente/dialog-asignar-examen-paciente.component.css
@@ -1,3 +1,13 @@
-mat-form-field{
+table {
     width: 100%;
-}
+  }
+
+  mat-form-field {
+    font-size: 14px;
+    width: 100%;
+  }
+
+  .btn{
+  
+    margin-left: 12px;
+  }
