--- a/src/app/pages/dialog-examenes/dialog-examenes.component.html
+++ b/src/app/pages/dialog-examenes/dialog-examenes.component.html
@@ -136,7 +136,7 @@
     <button mat-raised-button color="warn" mat-dialog-close>Cerrar</button>
     <button
       (click)="
-        registrarExamen(productForm.controls['folio'], productForm.value)
+        registrarExamen(productForm.value)
       "
       style="margin-left: 8px"
       mat-raised-button
