--- a/src/app/pages/pacientes/pacientes.component.html
+++ b/src/app/pages/pacientes/pacientes.component.html
@@ -84,7 +84,7 @@
               <mat-icon (click)="deletePaciente(row.folio)">delete</mat-icon>
             </button>
             <button mat-icon-button color="primary">
-              <mat-icon (click)="asignarExamenPaciente()">assignment</mat-icon>
+              <mat-icon (click)="asignarExamenPaciente(row.folio)">assignment</mat-icon>
             </button>
           </td>
         </ng-container>
