--- a/src/app/pages/dialog-asignar-examen-paciente/dialog-asignar-examen-paciente.component.html
+++ b/src/app/pages/dialog-asignar-examen-paciente/dialog-asignar-examen-paciente.component.html
@@ -8,54 +8,37 @@
       <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort>
           
-          <!-- Folio Column -->
-          <ng-container matColumnDef="folio">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Folio </th>
-            <td mat-cell *matCellDef="let row"> {{row.folio}} </td>
+          <!-- Medico Column -->
+          <ng-container matColumnDef="nombreMedico">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Medico </th>
+            <td mat-cell *matCellDef="let row"> {{row.nombreMedico}} </td>
           </ng-container>
           
-          <!-- Nombre Paciente Column -->
-          <ng-container matColumnDef="nombre">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre(s) </th>
-            <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
+          <!-- Fecha Examen Column -->
+          <ng-container matColumnDef="fechaExamen">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha Examen </th>
+            <td mat-cell *matCellDef="let row"> {{row.fechaExamen}} </td>
           </ng-container>
   
-          <!-- apellido Paterno Column -->
-          <ng-container matColumnDef="apellidoP">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Apellido Paterno </th>
-            <td mat-cell *matCellDef="let row"> {{row.apellidoP}} </td>
+          <!-- Tipo Examen Column -->
+          <ng-container matColumnDef="tipoExamen">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Examen </th>
+            <td mat-cell *matCellDef="let row"> {{row.tipoExamen}} </td>
           </ng-container>
   
-          <!-- apellido Materno Column -->
-          <ng-container matColumnDef="apellidoM">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Apellido Materno </th>
-            <td mat-cell *matCellDef="let row"> {{row.apellidoM}} </td>
+          <!-- Prueba Examen Column -->
+          <ng-container matColumnDef="prueba">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Prueba </th>
+            <td mat-cell *matCellDef="let row"> {{row.prueba}} </td>
           </ng-container>
   
-          <!-- Edad Column -->
-          <ng-container matColumnDef="edad">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Edad </th>
+          <!-- Resultado Column
+          <ng-container matColumnDef="resultado">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Resultado </th>
             <td mat-cell *matCellDef="let row"> {{row.edad}} </td>
           </ng-container>
-          
-          <!-- Genero Column -->
-          <ng-container matColumnDef="sexo">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Sexo </th>
-            <td mat-cell *matCellDef="let row"> {{row.sexo | genero}} </td>
-          </ng-container>
-  
-          <!-- Telefono Column -->
-          <ng-container matColumnDef="telefono">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Telefono </th>
-            <td mat-cell *matCellDef="let row"> {{row.telefono}} </td>
-          </ng-container>
-          
-          <!-- Correo Column -->
-          <ng-container matColumnDef="correo">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Correro </th>
-            <td mat-cell *matCellDef="let row"> {{row.correo}} </td>
-          </ng-container>
-          
+           -->
+         
           <!-- Action Column -->
           <ng-container matColumnDef="accion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
