cambios pdashboard y pdfmake

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -17,18 +17,38 @@
 
   
   <div class="container-fluid">
+
   <div class="row">
+
     <div class="col-lg-3 col-6">
-    
     <div class="small-box bg-info">
     <div class="inner">
-    <h3>150</h3>
-    <p>Examenes</p>
+    <h3>{{totalExamenes?.length}}</h3>
+    <p>Examenes Totales</p>
     </div>
     <div class="icon">
     <i class="ion ion-bag"></i>
     </div>
-    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+    <a routerLink="examenes" class="small-box-footer">Ver examenes <i class="fas fa-arrow-circle-right"></i></a>
     </div>
     </div>
+
+    <div class="col-lg-3 col-6">
+      <div class="small-box bg-info">
+      <div class="inner">
+      <h3>{{totalExamenesActivos?.length}}</h3>
+      <p>Examenes Activos</p>
+      </div>
+      <div class="icon">
+      <i class="ion ion-bag"></i>
+      </div>
+      <a routerLink="examenes" class="small-box-footer">Ver examenes <i class="fas fa-arrow-circle-right"></i></a>
+      </div>
+      </div>
+
+
+  </div>
+
+
+  
   </div>
