--- a/src/app/pages/dialog-asignar-examen-paciente/dialog-asignar-examen-paciente.component.html
+++ b/src/app/pages/dialog-asignar-examen-paciente/dialog-asignar-examen-paciente.component.html
@@ -17,7 +17,7 @@
           <!-- Fecha Examen Column -->
           <ng-container matColumnDef="fechaExamen">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha Examen </th>
-            <td mat-cell *matCellDef="let row"> {{row.fechaExamen}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.fechaExamen | date: "dd MMMM  yyyy "}} </td>
           </ng-container>
   
           <!-- Tipo Examen Column -->
@@ -45,6 +45,10 @@
             <td mat-cell *matCellDef="let row">
               <button class="btn" mat-raised-button color="primary">
                 <mat-icon >reply</mat-icon>
+              </button>
+              <button class="btn" mat-raised-button color="primary"
+              (click)="createPDF()">
+                <mat-icon >download</mat-icon>
               </button>
             </td>
           </ng-container>
