--- a/src/app/pages/examenes/examenes.component.html
+++ b/src/app/pages/examenes/examenes.component.html
@@ -51,9 +51,11 @@
         </ng-container>
 
         <!-- Status Column -->
-        <ng-container matColumnDef="estatus">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Estatus</th>
-          <td mat-cell *matCellDef="let row">{{ row.estatus }}</td>
+        <ng-container matColumnDef="estado">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado
+          </th>
+          <td mat-cell *matCellDef="let row">
+            <span class="badge bg-success" >{{ row.estado | titlecase }}</span></td>
         </ng-container>
 
         <!-- Action Column -->
