--- a/src/app/pages/dialog-asignar-examen-paciente/dialog-asignar-examen-paciente.component.html
+++ b/src/app/pages/dialog-asignar-examen-paciente/dialog-asignar-examen-paciente.component.html
@@ -47,7 +47,8 @@
                 <mat-icon >reply</mat-icon>
               </button>
               <button class="btn" mat-raised-button color="primary"
-              (click)="createPDF()">
+              (click)="createPDF()"
+              (click)="selectExamen(row)">
                 <mat-icon >download</mat-icon>
               </button>
             </td>
@@ -66,3 +67,5 @@
       </div>
     </div>
   </div>
+
+  
