--- a/src/app/pages/dialog-asignar-examen-paciente/dialog-asignar-examen-paciente.component.html
+++ b/src/app/pages/dialog-asignar-examen-paciente/dialog-asignar-examen-paciente.component.html
@@ -47,7 +47,7 @@
                 <mat-icon >reply</mat-icon>
               </button>
               <button class="btn" mat-raised-button color="primary"
-              (click)="createPDF()"
+              (click)="openPDF()"
               (click)="selectExamen(row)">
                 <mat-icon >download</mat-icon>
               </button>
@@ -67,5 +67,8 @@
       </div>
     </div>
   </div>
+
+  
+
 
   
