--- a/src/app/pages/component-pdf/component-pdf.component.html
+++ b/src/app/pages/component-pdf/component-pdf.component.html
@@ -14,5 +14,9 @@
             <td>{{user.phone}}</td>
         </tr>
     </table>
+
+    <h2>Holaaaaaaaaaaaaaaaaaaaaaaaa</h2>
+    <br>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum vero possimus at qui, pariatur corrupti maxime perspiciatis molestiae nihil illum? Modi alias tempora consectetur excepturi sapiente, dignissimos iste quam veniam.</p>
 </div>
 
