--- a/src/app/pages/pacientes/pacientes.component.html
+++ b/src/app/pages/pacientes/pacientes.component.html
@@ -107,3 +107,19 @@
     </div>
   </div>
 </div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br><br>
+<br><br>
+<br><br><br><br>
+
+<div *ngIf="showPDF">
+  <app-component-pdf 
+  [USERS]= "USERS"></app-component-pdf>
+</div>
+
+
